--- a/index.html
+++ b/index.html
@@ -16,51 +16,50 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "shoes_images/shoe_1.jpg" alt = "shoe image">
-              <img src = "shoes_images/shoe_2.jpg" alt = "shoe image">
-              <img src = "shoes_images/shoe_3.jpg" alt = "shoe image">
-              <img src = "shoes_images/shoe_4.jpg" alt = "shoe image">
+              <img src = "shoes_images/01.jpg" alt = "shoe image">
+              <img src = "shoes_images/01.jpg" alt = "shoe image">
+              <img src = "shoes_images/01.jpg" alt = "shoe image">
+              <img src = "shoes_images/01.jpg" alt = "shoe image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "shoes_images/shoe_1.jpg" alt = "shoe image">
+                <img src = "shoes_images/01.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "shoes_images/shoe_2.jpg" alt = "shoe image">
+                <img src = "shoes_images/01.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "shoes_images/shoe_3.jpg" alt = "shoe image">
+                <img src = "shoes_images/01.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "shoes_images/shoe_4.jpg" alt = "shoe image">
+                <img src = "shoes_images/01.jpg" alt = "shoe image">
               </a>
             </div>
           </div>
         </div>
         <!-- card right -->
         <div class = "product-content">
-          <h2 class = "product-title">nike shoes</h2>
-          <a href = "#" class = "product-link">visit nike store</a>
+          <h2 class = "product-title">Mercedes A220</h2>
+          <a href = "#" class = "product-link">visit Automall</a>
           <div class = "product-rating">
             <i class = "fas fa-star"></i>
             <i class = "fas fa-star"></i>
             <i class = "fas fa-star"></i>
             <i class = "fas fa-star"></i>
             <i class = "fas fa-star-half-alt"></i>
-            <span>4.7(21)</span>
+            <span>4.7(3)</span>
           </div>
 
           <div class = "product-price">
-            <p class = "last-price">Old Price: <span>$257.00</span></p>
-            <p class = "new-price">New Price: <span>$249.00 (5%)</span></p>
+            <p class = "new-price"> Price: <span>$25000.00</span></p>
           </div>
 
           <div class = "product-detail">
@@ -70,38 +69,15 @@
             <ul>
               <li>Color: <span>Black</span></li>
               <li>Available: <span>in stock</span></li>
-              <li>Category: <span>Shoes</span></li>
+              <li>Category: <span>Sport</span></li>
               <li>Shipping Area: <span>All over the world</span></li>
               <li>Shipping Fee: <span>Free</span></li>
             </ul>
           </div>
 
-          <div class = "purchase-info">
-            <input type = "number" min = "0" value = "1">
-            <button type = "button" class = "btn">
-              Add to Cart <i class = "fas fa-shopping-cart"></i>
-            </button>
-            <button type = "button" class = "btn">Compare</button>
-          </div>
+         
 
-          <div class = "social-links">
-            <p>Share At: </p>
-            <a href = "#">
-              <i class = "fab fa-facebook-f"></i>
-            </a>
-            <a href = "#">
-              <i class = "fab fa-twitter"></i>
-            </a>
-            <a href = "#">
-              <i class = "fab fa-instagram"></i>
-            </a>
-            <a href = "#">
-              <i class = "fab fa-whatsapp"></i>
-            </a>
-            <a href = "#">
-              <i class = "fab fa-pinterest"></i>
-            </a>
-          </div>
+         
         </div>
       </div>
     </div>
