--- a/index3.html
+++ b/index3.html
@@ -60,31 +60,31 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
+              <img src = "img/03.jpg" alt = "shoe image">
+              <img src = "img/03.jpg" alt = "shoe image">
+              <img src = "img/03.jpg" alt = "shoe image">
+              <img src = "img/03.jpg" alt = "shoe image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "img/03.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "img/03.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "img/03.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "img/02.jpg" alt = "shoe image">
               </a>
             </div>
           </div>
