--- a/index1.html
+++ b/index1.html
@@ -253,51 +253,51 @@
 
     <div class="type-row">
         <div class="type-col">
-            <img src="/img/Type/01.png" alt="">
+            <img src="img/Type/01.png" alt="">
             <h5>Seaden</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/02.png" alt="">
+            <img src="img/Type/02.png" alt="">
             <h5>Compact</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/03.png" alt="">
+            <img src="img/Type/03.png" alt="">
             <h5>Convertible</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/04.png" alt="">
+            <img src="img/Type/04.png" alt="">
             <h5>SUV</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/05.png" alt="">
+            <img src="img/Type/05.png" alt="">
             <h5>Crossover</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/06.png" alt="">
+            <img src="img/Type/06.png" alt="">
             <h5>Wagon</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/07.png" alt="">
+            <img src="img/Type/07.png" alt="">
             <h5>Sports</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/08.png" alt="">
+            <img src="img/Type/08.png" alt="">
             <h5>Pickup</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/09.png" alt="">
+            <img src="img/Type/09.png" alt="">
             <h5>Family</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/10.png" alt="">
+            <img src="img/Type/10.png" alt="">
             <h5>Coupe</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/11.png" alt="">
+            <img src="img/Type/11.png" alt="">
             <h5>Electric</h5>
         </div>
         <div class="type-col">
-            <img src="/img/Type/12.png" alt="">
+            <img src="img/Type/12.png" alt="">
             <h5>Luxury</h5>
         </div>
     </div>
