--- a/index1.html
+++ b/index1.html
@@ -33,7 +33,7 @@
             <input type="password" placeholder="password" class="box"><br>
             <p>forget your password? <a href="#">click here</a></p>
             <input type="submit" value="Login now" class="btn">
-            <a href="index2.html" class="btn">login as admin</a>
+            <a href="adminside.html" class="btn">login as admin</a>
             <p>Don't have an acount? <a href="#">create one</a></p>
         </form>
     </div>
@@ -138,34 +138,7 @@
             <button>Check-out</button>
         </div>
     </div>
-    <div class="swiper-slide arr-col">
-        <div class="image">
-        <a href="index2.html"><img src="img/02.jpg" alt=""></a>
-        </div>
-<h5>Ferari</h5>
-<div class="rating">
-    <div class="stars">
-        <i class="bx bxs-star"></i>
-        <i class="bx bxs-star"></i>
-        <i class="bx bxs-star"></i>
-        <i class="bx bxs-star"></i>
-        <i class="bx bxs-star-half"></i>
-    </div>
-</div>
-    <div class="review">
-        <span>5.0 (5.8 5k Review)</span>
-    </div>
-    <div class="features">
-        <span><i class="bx bx-error-circle"></i>Automatic</span>
-        <span><i class="bx bx-label"></i>10.15km</span>
-        <span><i class="bx bx-car"></i>Model 2021</span>
-        <span><i class="bx bx-target-lock"></i>Diesel</span>
-    </div>
-    <div class="price">
-        <p>$40.628</p>
-        <button>Check-out</button>
-    </div>
-</div>
+    
 <div class="swiper-slide arr-col">
     <div class="image">
         <a href="index3.html"><img src="img/03.jpg" alt=""></a>
