--- a/index7.html
+++ b/index7.html
@@ -31,7 +31,7 @@
           <input type="password" placeholder="password" class="box"><br>
           <p>forget your password? <a href="#">click here</a></p>
           <input type="submit" value="Login now" class="btn">
-          <a href="index2.html" class="btn">login as admin</a>
+          <a href="adminside.html" class="btn">login as admin</a>
           <p>Don't have an acount? <a href="#">create one</a></p>
       </form>
   </div>
