--- a/src/pages/adminside.html
+++ b/src/pages/adminside.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/style3.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Admin Panel</title>
 </head>
-
 <body>
     <div class="side-menu">
-        <div class="brand-name">
-            <h1>Brand</h1>
-        </div>
+        <a href="adminside.html" class="logo"><h1> <span>Auto</span>Mall</h1></a>
         <ul>
-            <li><img src="dashboard (2).png" alt="">&nbsp; <span>Dashboard</span> </li>
-            <li><img src="reading-book (1).png" alt="">&nbsp;<span>Students</span> </li>
-            <li><img src="teacher2.png" alt="">&nbsp;<span>Teachers</span> </li>
-            <li><img src="school.png" alt="">&nbsp;<span>Schools</span> </li>
-            <li><img src="payment.png" alt="">&nbsp;<span>Income</span> </li>
-            <li><img src="help-web-button.png" alt="">&nbsp; <span>Help</span></li>
-            <li><img src="settings.png" alt="">&nbsp;<span>Settings</span> </li>
+            <li><img src="../assets/img/admin_imgs/dashboard (2).png" alt="">&nbsp; <a href="adminside.html"><span>Dashboard</span></a> </li>
+            <li><img src="../assets/img/admin_imgs/payment.png" alt="">&nbsp;<a href="listingManagement.html"><span>Listing-Man</span></a> </li>
+            <li><img src="../assets/img/admin_imgs/settings.png" alt="">&nbsp;<a href="contentmanagement.html"><span>CMS</span></a> </li>
+            <li><i class="bi bi-box-arrow-left"></i>&nbsp;<a href="index1.html"><span>Logout</span></a></li>
         </ul>
     </div>
     <div class="container">
@@ -29,13 +23,13 @@
             <div class="nav">
                 <div class="search">
                     <input type="text" placeholder="Search..">
-                    <button type="submit"><img src="search.png" alt=""></button>
+                    <button type="submit"><img src="../assets/img/admin_imgs/search.png" alt=""></button>
                 </div>
                 <div class="user">
                     <a href="#" class="btn">Add New</a>
-                    <img src="notifications.png" alt="">
+                    <img src="../assets/img/admin_imgs/notifications.png" alt="">
                     <div class="img-case">
-                        <img src="user.png" alt="">
+                        <img src="../assets/img/admin_imgs/user.png" alt="">
                     </div>
                 </div>
             </div>
@@ -44,95 +38,109 @@
             <div class="cards">
                 <div class="card">
                     <div class="box">
-                        <h1>2194</h1>
-                        <h3>Students</h3>
+                        <h1>+999</h1>
+                        <h3>Clients</h3>
                     </div>
                     <div class="icon-case">
-                        <img src="students.png" alt="">
+                        <img src="../assets/img/admin_imgs/students.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <h1>53</h1>
-                        <h3>Teachers</h3>
+                        <h1>+2300</h1>
+                        <h3>Cars Sold</h3>
                     </div>
                     <div class="icon-case">
-                        <img src="teachers.png" alt="">
+                        <img src="../assets/img/admin_imgs/teachers.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <h1>5</h1>
-                        <h3>Schools</h3>
+                        <h1>+99</h1>
+                        <h3>Branches</h3>
                     </div>
                     <div class="icon-case">
-                        <img src="schools.png" alt="">
+                        <img src="../assets/img/admin_imgs/schools.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <h1>350000</h1>
+                        <h1>$35000</h1>
                         <h3>Income</h3>
                     </div>
                     <div class="icon-case">
-                        <img src="income.png" alt="">
+                        <img src="../assets/img/admin_imgs/income.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="charts">
+                <div class="chart">
+                    <h2>Earnings (past 12 months)</h2>
+                    <div>
+                        <canvas id="lineChart"></canvas>
+                    </div>
+                </div>
+                <div class="chart doughnut-chart">
+                    <h2>Cars</h2>
+                    <div>
+                        <canvas id="doughnut"></canvas>
                     </div>
                 </div>
             </div>
             <div class="content-2">
                 <div class="recent-payments">
                     <div class="title">
-                        <h2>Recent Payments</h2>
+                        <h2>Recent Selling Requests</h2>
                         <a href="#" class="btn">View All</a>
                     </div>
                     <table>
                         <tr>
-                            <th>Name</th>
-                            <th>School</th>
-                            <th>Amount</th>
+                            <th>User-Name</th>
+                            <th>Car-Name</th>
+                            <th>Status</th>
                             <th>Option</th>
                         </tr>
                         <tr>
                             <td>John Doe</td>
                             <td>St. James College</td>
-                            <td>$120</td>
+                            <td class="APPROVED">APPROVED</td>
                             <td><a href="#" class="btn">View</a></td>
                         </tr>
                         <tr>
                             <td>John Doe</td>
                             <td>St. James College</td>
-                            <td>$120</td>
+                            <td class="APPROVED">APPROVED</td>
                             <td><a href="#" class="btn">View</a></td>
                         </tr>
                         <tr>
                             <td>John Doe</td>
                             <td>St. James College</td>
-                            <td>$120</td>
+                            <td class="CANCELED">CANCELED</td>
                             <td><a href="#" class="btn">View</a></td>
                         </tr>
                         <tr>
                             <td>John Doe</td>
                             <td>St. James College</td>
-                            <td>$120</td>
+                            <td class="CANCELED">CANCELED</td>
                             <td><a href="#" class="btn">View</a></td>
                         </tr>
                         <tr>
                             <td>John Doe</td>
                             <td>St. James College</td>
-                            <td>$120</td>
+                            <td class="APPROVED">APPROVED</td>
                             <td><a href="#" class="btn">View</a></td>
                         </tr>
                         <tr>
                             <td>John Doe</td>
                             <td>St. James College</td>
-                            <td>$120</td>
+                            <td class="CANCELED">CANCELED</td>
                             <td><a href="#" class="btn">View</a></td>
                         </tr>
                     </table>
                 </div>
                 <div class="new-students">
                     <div class="title">
-                        <h2>New Students</h2>
+                        <h2>Reviews</h2>
                         <a href="#" class="btn">View All</a>
                     </div>
                     <table>
@@ -142,31 +150,34 @@
                             <th>option</th>
                         </tr>
                         <tr>
-                            <td><img src="user.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/user.png" alt=""></td>
                             <td>John Steve Doe</td>
-                            <td><img src="info.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/info.png" alt=""></td>
                         </tr>
                         <tr>
-                            <td><img src="user.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/user.png" alt=""></td>
                             <td>John Steve Doe</td>
-                            <td><img src="info.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/info.png" alt=""></td>
                         </tr>
                         <tr>
-                            <td><img src="user.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/user.png" alt=""></td>
                             <td>John Steve Doe</td>
-                            <td><img src="info.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/info.png" alt=""></td>
                         </tr>
                         <tr>
-                            <td><img src="user.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/user.png" alt=""></td>
                             <td>John Steve Doe</td>
-                            <td><img src="info.png" alt=""></td>
+                            <td><img src="../assets/img/admin_imgs/info.png" alt=""></td>
                         </tr>
-
                     </table>
                 </div>
             </div>
         </div>
     </div>
+</div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
+<script src="../js/chart1.js"></script>
+<script src="../js/chart2.js"></script>
 </body>
-
 </html>
