--- a/src/pages/index3.html
+++ b/src/pages/index3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Product Card/Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="../styles/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   </head>
   <body>
@@ -60,31 +60,31 @@
         <div class = "product-imgs">
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
-              <img src = "shoes_images/01.jpg" alt = "shoe image">
+              <img src = "../assets/img/03.jpg" alt = "shoe image">
+              <img src = "../assets/img/03.jpg" alt = "shoe image">
+              <img src = "../assets/img/03.jpg" alt = "shoe image">
+              <img src = "../assets/img/03.jpg" alt = "shoe image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "1">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "../assets/img/03.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "2">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "../assets/img/03.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "3">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "../assets/img/03.jpg" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "4">
-                <img src = "shoes_images/01.jpg" alt = "shoe image">
+                <img src = "../assets/img/03.jpg" alt = "shoe image">
               </a>
             </div>
           </div>
@@ -155,6 +155,6 @@
           </div>
       </div>
     
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
