--- a/src/pages/listingManagement.html
+++ b/src/pages/listingManagement.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="../styles/style3.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Admin Panel</title>
 </head>
@@ -12,9 +12,9 @@
     <div class="side-menu">
         <a href="adminside.html" class="logo"><h1> <span>Auto</span>Mall</h1></a>
         <ul>
-            <li><img src="img/admin_imgs/dashboard (2).png" alt="">&nbsp; <a href="adminside.html"><span>Dashboard</span></a> </li>
-            <li><img src="img/admin_imgs/payment.png" alt="">&nbsp;<a href="listingManagement.html"><span>Listing-Man</span></a> </li>
-            <li><img src="img/admin_imgs/settings.png" alt="">&nbsp;<a href="contentmanagement.html"><span>CMS</span></a> </li>
+            <li><img src="../assets/img/admin_imgs/dashboard (2).png" alt="">&nbsp; <a href="adminside.html"><span>Dashboard</span></a> </li>
+            <li><img src="../assets/img/admin_imgs/payment.png" alt="">&nbsp;<a href="listingManagement.html"><span>Listing-Man</span></a> </li>
+            <li><img src="../assets/img/admin_imgs/settings.png" alt="">&nbsp;<a href="contentmanagement.html"><span>CMS</span></a> </li>
             <li><i class="bi bi-box-arrow-left"></i>&nbsp;<a href="index1.html"><span>Logout</span></a></li>
         </ul>
     </div>
@@ -23,13 +23,13 @@
             <div class="nav">
                 <div class="search">
                     <input type="text" placeholder="Search..">
-                    <button type="submit"><img src="img/admin_imgs/search.png" alt=""></button>
+                    <button type="submit"><img src="../assets/img/admin_imgs/search.png" alt=""></button>
                 </div>
                 <div class="user">
                     <a href="#" class="btn">Add New</a>
-                    <img src="img/admin_imgs/notifications.png" alt="">
+                    <img src="../assets/img/admin_imgs/notifications.png" alt="">
                     <div class="img-case">
-                        <img src="img/admin_imgs/user.png" alt="">
+                        <img src="../assets/img/admin_imgs/user.png" alt="">
                     </div>
                 </div>
             </div>
